olm/c/vendor/libolm/include/olm/olm.h

typedef struct OlmAccount OlmAccount;
typedef struct OlmSession OlmSession;
typedef struct OlmUtility OlmUtility;
void olm_get_library_version(uint8_t *major, uint8_t *minor, uint8_t *patch);
size_t olm_account_size(void);
size_t olm_session_size(void);
size_t olm_utility_size(void);
OlmAccount * olm_account(
    void * memory
);
OlmSession * olm_session(
    void * memory
);
OlmUtility * olm_utility(
    void * memory
);
size_t olm_error(void);
const char * olm_account_last_error(
    OlmAccount * account
);
const char * olm_session_last_error(
    OlmSession * session
);
const char * olm_utility_last_error(
    OlmUtility * utility
);
size_t olm_clear_account(
    OlmAccount * account
);
size_t olm_clear_session(
    OlmSession * session
);
size_t olm_clear_utility(
    OlmUtility * utility
);
size_t olm_pickle_account_length(
    OlmAccount * account
);
size_t olm_pickle_session_length(
    OlmSession * session
);
size_t olm_pickle_account(
    OlmAccount * account,
    void const * key, size_t key_length,
    void * pickled, size_t pickled_length
);
size_t olm_pickle_session(
    OlmSession * session,
    void const * key, size_t key_length,
    void * pickled, size_t pickled_length
);
size_t olm_unpickle_account(
    OlmAccount * account,
    void const * key, size_t key_length,
    void * pickled, size_t pickled_length
);
size_t olm_unpickle_session(
    OlmSession * session,
    void const * key, size_t key_length,
    void * pickled, size_t pickled_length
);
size_t olm_create_account_random_length(
    OlmAccount * account
);
size_t olm_create_account(
    OlmAccount * account,
    void * random, size_t random_length
);
size_t olm_account_identity_keys_length(
    OlmAccount * account
);
size_t olm_account_identity_keys(
    OlmAccount * account,
    void * identity_keys, size_t identity_key_length
);
size_t olm_account_signature_length(
    OlmAccount * account
);
size_t olm_account_sign(
    OlmAccount * account,
    void const * message, size_t message_length,
    void * signature, size_t signature_length
);
size_t olm_account_one_time_keys_length(
    OlmAccount * account
);
size_t olm_account_one_time_keys(
    OlmAccount * account,
    void * one_time_keys, size_t one_time_keys_length
);
size_t olm_account_mark_keys_as_published(
    OlmAccount * account
);
size_t olm_account_max_number_of_one_time_keys(
    OlmAccount * account
);
size_t olm_account_generate_one_time_keys_random_length(
    OlmAccount * account,
    size_t number_of_keys
);
size_t olm_account_generate_one_time_keys(
    OlmAccount * account,
    size_t number_of_keys,
    void * random, size_t random_length
);
size_t olm_account_generate_fallback_key_random_length(
    OlmAccount * account
);
size_t olm_account_generate_fallback_key(
    OlmAccount * account,
    void * random, size_t random_length
);
size_t olm_account_fallback_key_length(
    OlmAccount * account
);
size_t olm_account_fallback_key(
    OlmAccount * account,
    void * fallback_key, size_t fallback_key_size
);
size_t olm_create_outbound_session_random_length(
    OlmSession * session
);
size_t olm_create_outbound_session(
    OlmSession * session,
    OlmAccount * account,
    void const * their_identity_key, size_t their_identity_key_length,
    void const * their_one_time_key, size_t their_one_time_key_length,
    void * random, size_t random_length
);
size_t olm_create_inbound_session(
    OlmSession * session,
    OlmAccount * account,
    void * one_time_key_message, size_t message_length
);
size_t olm_create_inbound_session_from(
    OlmSession * session,
    OlmAccount * account,
    void const * their_identity_key, size_t their_identity_key_length,
    void * one_time_key_message, size_t message_length
);
size_t olm_session_id_length(
    OlmSession * session
);
size_t olm_session_id(
    OlmSession * session,
    void * id, size_t id_length
);
int olm_session_has_received_message(
    OlmSession *session
);
void olm_session_describe(OlmSession * session, char *buf, size_t buflen);
size_t olm_matches_inbound_session(
    OlmSession * session,
    void * one_time_key_message, size_t message_length
);
size_t olm_matches_inbound_session_from(
    OlmSession * session,
    void const * their_identity_key, size_t their_identity_key_length,
    void * one_time_key_message, size_t message_length
);
size_t olm_encrypt_message_type(
    OlmSession * session
);
size_t olm_encrypt_random_length(
    OlmSession * session
);
size_t olm_encrypt_message_length(
    OlmSession * session,
    size_t plaintext_length
);
size_t olm_encrypt(
    OlmSession * session,
    void const * plaintext, size_t plaintext_length,
    void * random, size_t random_length,
    void * message, size_t message_length
);
size_t olm_decrypt_max_plaintext_length(
    OlmSession * session,
    size_t message_type,
    void * message, size_t message_length
);
size_t olm_decrypt(
    OlmSession * session,
    size_t message_type,
    void * message, size_t message_length,
    void * plaintext, size_t max_plaintext_length
);
size_t olm_sha256_length(
   OlmUtility * utility
);